# sxiv

./: .gitignore  EDITOR_CONFIG.md  Makefile.am  README.md  bootstrap  commands.c  commands.lst  config.h  configure.ac  image.c  main.c  options.c  sxiv.1  sxiv.h  thumbs.c  window.c
icon/: Makefile.am
